--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="container align-items-center my-4">
-                        <img src="./Graphic.JPG" alt="" class="img img-sm">
+                        <img src="./Graphic.jpg" alt="" class="img img-sm">
                     </div>
                     <h1>Section title</h1>
                     <table class="table table-striped table-sm ">
